fullSandbox11072023/force-app/main/default/objects/Lead/fields/Reason_lead_is_Unqualified__c.field-meta.xml
<CustomField>
    <fullName>Reason_lead_is_Unqualified__c</fullName>
    <description>Enter the Reason why the lead is unqualified.</description>
    <inlineHelpText>Enter the Reason why the lead is unqualified.</inlineHelpText>
    <label>Other Reason lead is Unqualified</label>
    <type>TextArea</type>
</CustomField>