fullSandbox11072023/force-app/main/default/objects/Lead/fields/Reason_Lead_is_Unqualified_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Reason_Lead_is_Unqualified_Picklist__c</fullName>
    <label>Reason Lead is Unqualified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Contacted-No Response</fullName>
            </value>
            <value>
                <fullName>Current Customer – Already Using Product</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>International Lead</fullName>
            </value>
            <value>
                <fullName>Need Evidence Based Medicine</fullName>
            </value>
            <value>
                <fullName>Not Interested Presently</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Price Too High</fullName>
            </value>
            <value>
                <fullName>Sample Request - Direct Patient Inquiry</fullName>
            </value>
            <value>
                <fullName>SYSTEM</fullName>
            </value>
            <value>
                <fullName>Using Competitive Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>