fullSandbox11072023/force-app/main/default/objects/Lead/fields/Reassign_using_lead_assignment_rules__c.field-meta.xml
<CustomField>
    <fullName>Reassign_using_lead_assignment_rules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reassign using lead assignment rules</label>
    <type>Checkbox</type>
</CustomField>