fullSandbox11072023/force-app/main/default/objects/Lead/fields/Receive_Additional_Communication__c.field-meta.xml
<CustomField>
    <fullName>Receive_Additional_Communication__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I&apos;d like to receive additional communications from Teleflex, Including educational opportunities, new product information, event information, adn product updates</description>
    <inlineHelpText>I&apos;d like to receive additional communications from Teleflex, Including educational opportunities, new product information, event information, adn product updates</inlineHelpText>
    <label>Receive Additional Communication</label>
    <type>Checkbox</type>
</CustomField>