fullSandbox11072023/force-app/main/default/objects/Lead/fields/Requested__c.field-meta.xml
<CustomField>
    <fullName>Requested__c</fullName>
    <label>Requested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Access Card</fullName>
            </value>
            <value>
                <fullName>Demonstration</fullName>
            </value>
            <value>
                <fullName>Insertion Poster</fullName>
            </value>
            <value>
                <fullName>Whitepaper</fullName>
            </value>
            <value>
                <fullName>E-mail Info</fullName>
            </value>
            <value>
                <fullName>Have Rep Call</fullName>
            </value>
            <value>
                <fullName>Literature</fullName>
            </value>
            <value>
                <fullName>Clinical Support</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Samples for Evaluation</fullName>
            </value>
            <value>
                <fullName>Contact for Purchase</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>New Product Idea</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Samples</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>