fullSandbox11072023/force-app/main/default/objects/Lead/fields/Resp_Rating_Change__c.field-meta.xml
<CustomField>
    <fullName>Resp_Rating_Change__c</fullName>
    <description>Date gets populated when Resp lead rating changes.</description>
    <label>Resp. Rating Change</label>
    <type>Date</type>
</CustomField>