fullSandbox11072023/force-app/main/default/objects/Lead/fields/Robotic_User__c.field-meta.xml
<CustomField>
    <fullName>Robotic_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Robotic User</label>
    <type>Checkbox</type>
</CustomField>