fullSandbox11072023/force-app/main/default/objects/Lead/fields/SafeSite_Website__c.field-meta.xml
<CustomField>
    <fullName>SafeSite_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SafeSite Website</label>
    <type>Checkbox</type>
</CustomField>