fullSandbox11072023/force-app/main/default/objects/Lead/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <formula>Owner:User.Manager_Name__c</formula>
    <label>Sales Manager</label>
    <type>Text</type>
</CustomField>