fullSandbox11072023/force-app/main/default/objects/Lead/fields/Sample_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Sample_Request_Date__c</fullName>
    <description>Field to determine the data a sample request came from Eloqua</description>
    <label>Sample Request Date</label>
    <type>Date</type>
</CustomField>