fullSandbox11072023/force-app/main/default/objects/Lead/fields/Sample_Requested__c.field-meta.xml
<CustomField>
    <fullName>Sample_Requested__c</fullName>
    <description>When a customer is requesting a sample, this field will tell you what sample is being requested</description>
    <inlineHelpText>When a customer is requesting a sample, this field will tell you what sample is being requested</inlineHelpText>
    <label>Sample Requested</label>
    <type>TextArea</type>
</CustomField>