fullSandbox11072023/force-app/main/default/objects/Lead/fields/Secondary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact__c</fullName>
    <label>Secondary Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>