fullSandbox11072023/force-app/main/default/objects/Lead/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <description>Session Time</description>
    <label>Session</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Noon</fullName>
            </value>
            <value>
                <fullName>3pm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>