fullSandbox11072023/force-app/main/default/objects/Lead/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <label>Signature</label>
    <length>250</length>
    <type>Text</type>
</CustomField>