fullSandbox11072023/force-app/main/default/objects/Lead/fields/SPAM_HTTP_Checker__c.field-meta.xml
<CustomField>
    <fullName>SPAM_HTTP_Checker__c</fullName>
    <formula>OR( 
UPPER(LEFT(FirstName, 4)) = &quot;HTTP&quot;, 
UPPER(LEFT(LastName, 4)) = &quot;HTTP&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPAM - HTTP Checker</label>
    <type>Checkbox</type>
</CustomField>