fullSandbox11072023/force-app/main/default/objects/Lead/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <description>Eloqua related field for Surgical</description>
    <label>Specialty</label>
    <type>TextArea</type>
</CustomField>