fullSandbox11072023/force-app/main/default/objects/Lead/fields/Specific_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Specific_Lead_Source__c</fullName>
    <label>Specific Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>American Association for Respiratory Care (AARC)</fullName>
            </value>
            <value>
                <fullName>American Society of Anesthesia Technologists &amp; Technicians (ASATT)</fullName>
            </value>
            <value>
                <fullName>American Society of Anesthesiologists (ASA)</fullName>
            </value>
            <value>
                <fullName>Association for Professionals in Infection Control and Epidemiology (APIC)</fullName>
            </value>
            <value>
                <fullName>BID</fullName>
            </value>
            <value>
                <fullName>Mailer</fullName>
            </value>
            <value>
                <fullName>International Continence Society (ICS)</fullName>
            </value>
            <value>
                <fullName>National Association of Neonatal Nurses (NANN)</fullName>
            </value>
            <value>
                <fullName>Post Graduate Assembly (PGA)</fullName>
            </value>
            <value>
                <fullName>Society of Airway Management (SAM)</fullName>
            </value>
            <value>
                <fullName>Society of Critical Care Medicine (SCCM)</fullName>
            </value>
            <value>
                <fullName>Spring INS 2014 Booth</fullName>
            </value>
            <value>
                <fullName>Spring INS 2014 Breakfast Symposium</fullName>
            </value>
            <value>
                <fullName>Spring INS 2014 Cadaver Lab</fullName>
            </value>
            <value>
                <fullName>AACN/NTI 2014</fullName>
            </value>
            <value>
                <fullName>AACN 2014</fullName>
            </value>
            <value>
                <fullName>AAGL 2014</fullName>
            </value>
            <value>
                <fullName>AANA 2014</fullName>
            </value>
            <value>
                <fullName>AAO 2014</fullName>
            </value>
            <value>
                <fullName>AARC   2014</fullName>
            </value>
            <value>
                <fullName>ACEP 2014</fullName>
            </value>
            <value>
                <fullName>AMN 2014</fullName>
            </value>
            <value>
                <fullName>AMTC 2014</fullName>
            </value>
            <value>
                <fullName>ANS 2014</fullName>
            </value>
            <value>
                <fullName>APAO 2014</fullName>
            </value>
            <value>
                <fullName>APIC 2014</fullName>
            </value>
            <value>
                <fullName>ARN 2014</fullName>
            </value>
            <value>
                <fullName>ASA 2014</fullName>
            </value>
            <value>
                <fullName>ASATT 2014</fullName>
            </value>
            <value>
                <fullName>ASCO 2014</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>