fullSandbox11072023/force-app/main/default/objects/Lead/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Unit__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>10HO - National Hardware</fullName>
            </value>
            <value>
                <fullName>10RT - National Retail</fullName>
            </value>
            <value>
                <fullName>10TR - National Trade</fullName>
            </value>
            <value>
                <fullName>12RT - NSW Retail</fullName>
            </value>
            <value>
                <fullName>12TR - NSW Trade</fullName>
            </value>
            <value>
                <fullName>13RT - VIC Retail</fullName>
            </value>
            <value>
                <fullName>13TR - VIC Trade</fullName>
            </value>
            <value>
                <fullName>14RT - QLD Retail</fullName>
            </value>
            <value>
                <fullName>14TR - QLD Trade</fullName>
            </value>
            <value>
                <fullName>15RT - SA Retail</fullName>
            </value>
            <value>
                <fullName>15TR - SA Trade</fullName>
            </value>
            <value>
                <fullName>16RT - WA Retail</fullName>
            </value>
            <value>
                <fullName>16TR - WA Trade</fullName>
            </value>
            <value>
                <fullName>18RT - International/Emergency Retail</fullName>
            </value>
            <value>
                <fullName>18TR - International/Emergency Trade</fullName>
            </value>
            <value>
                <fullName>31IN - Fishers Industrial</fullName>
            </value>
            <value>
                <fullName>31RS - Fishers Reseller</fullName>
            </value>
            <value>
                <fullName>4201 - ACT</fullName>
            </value>
            <value>
                <fullName>4202 - South Eastern Sydney</fullName>
            </value>
            <value>
                <fullName>4203 - Southern NSW</fullName>
            </value>
            <value>
                <fullName>4204 - South Western Sydney</fullName>
            </value>
            <value>
                <fullName>4205 - Western NSW</fullName>
            </value>
            <value>
                <fullName>4206 - Western Syd LHN</fullName>
            </value>
            <value>
                <fullName>4207 - Northern Sydney</fullName>
            </value>
            <value>
                <fullName>4208 - Hunter New England</fullName>
            </value>
            <value>
                <fullName>4209 - Northern NSW</fullName>
            </value>
            <value>
                <fullName>4211 - Resellers</fullName>
            </value>
            <value>
                <fullName>4212 - Packers</fullName>
            </value>
            <value>
                <fullName>4213 - Overseas</fullName>
            </value>
            <value>
                <fullName>4214 - Illawarra Shoalhaven</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>