fullSandbox11072023/force-app/main/default/objects/Lead/fields/Territory_Based_Owner__c.field-meta.xml
<CustomField>
    <fullName>Territory_Based_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the suggested owner based on ZPSA and the Business Unit.</inlineHelpText>
    <label>Territory Based Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>