fullSandbox11072023/force-app/main/default/objects/Lead/fields/Territory_Based_Owner_BU__c.field-meta.xml
<CustomField>
    <fullName>Territory_Based_Owner_BU__c</fullName>
    <formula>TEXT( Territory_Based_Owner__r.Business_Unit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Based Owner BU</label>
    <type>Text</type>
</CustomField>