fullSandbox11072023/force-app/main/default/objects/Lead/fields/Territory_Based_Owner_BU_Check__c.field-meta.xml
<CustomField>
    <fullName>Territory_Based_Owner_BU_Check__c</fullName>
    <formula>TEXT(Business_Unit__c) &lt;&gt;  Territory_Based_Owner_BU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Based Owner BU Check</label>
    <type>Checkbox</type>
</CustomField>