fullSandbox11072023/force-app/main/default/objects/Lead/fields/Territory_Based_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Territory_Based_Owner_Email__c</fullName>
    <formula>Territory_Based_Owner__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Based Owner Email</label>
    <type>Text</type>
</CustomField>