fullSandbox11072023/force-app/main/default/objects/Lead/fields/Urology_Sample_Request__c.field-meta.xml
<CustomField>
    <fullName>Urology_Sample_Request__c</fullName>
    <label>Urology Sample Request</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>