fullSandbox11072023/force-app/main/default/objects/Lead/fields/What_Brought_You_to_the_Booth__c.field-meta.xml
<CustomField>
    <fullName>What_Brought_You_to_the_Booth__c</fullName>
    <label>What Brought You to the Booth</label>
    <type>TextArea</type>
</CustomField>