fullSandbox11072023/force-app/main/default/objects/Lead/fields/What_Products_are_you_Interested_in__c.field-meta.xml
<CustomField>
    <fullName>What_Products_are_you_Interested_in__c</fullName>
    <label>What Products are you Interested in?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>