fullSandbox11072023/force-app/main/default/objects/Lead/fields/WillthisreplacePolymerLigationSales__c.field-meta.xml
<CustomField>
    <fullName>WillthisreplacePolymerLigationSales__c</fullName>
    <label>Will this replace Polymer Ligation Sales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>