fullSandbox11072023/force-app/main/default/objects/Lead/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <description>Registrant provisioned text</description>
    <inlineHelpText>Registrant provisioned text</inlineHelpText>
    <label>Zip</label>
    <length>100</length>
    <type>Text</type>
</CustomField>