fullSandbox11072023/force-app/main/default/objects/Lead/fields/Zip_Code_Auto_Route__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_Auto_Route__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to drive whether the Zip Code Territory automation fires again (if false).</description>
    <inlineHelpText>Please uncheck when you want to evaluate and assign this lead using territory rules.</inlineHelpText>
    <label>Do Not Assign Lead using Territory rules</label>
    <type>Checkbox</type>
</CustomField>