fullSandbox11072023/force-app/main/default/objects/Lead/fields/Zip_Code_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_Business_Unit__c</fullName>
    <formula>IF(!ISBLANK(TEXT(Business_Unit__c)), TEXT(Business_Unit__c),
IF(LEFT(Zip_Code_Formstack_Affiliation__c, 3) = &quot;Hos&quot;, &quot;Vascular&quot;,
IF(LEFT(Zip_Code_Formstack_Affiliation__c, 3) = &quot;EMS&quot;, &quot;EMS&quot;,
IF(LEFT(Zip_Code_Formstack_Affiliation__c, 3) = &quot;Int&quot;, &quot;IA&quot;,
IF(LEFT(Zip_Code_Formstack_Affiliation__c, 3) = &quot;Ane&quot;, &quot;Anesthesia&quot;,
IF(LEFT(Zip_Code_Formstack_Affiliation__c, 3) = &quot;Sur&quot;, &quot;Surgical&quot;,
&quot;&quot;
))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip Code Business Unit</label>
    <type>Text</type>
</CustomField>