fullSandbox11072023/force-app/main/default/objects/Lead/fields/Zip_Code_Formstack_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_Formstack_Affiliation__c</fullName>
    <inlineHelpText>Field used to determine the Business Unit</inlineHelpText>
    <label>Zip Code Formstack Affiliation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>