fullSandbox11072023/force-app/main/default/objects/Lead/fields/Zip_Code_Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_Zip__c</fullName>
    <formula>LEFT(PostalCode, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip Code Zip</label>
    <type>Text</type>
</CustomField>