fullSandbox11072023/force-app/main/default/objects/Lead/recordTypes/NA_Vascular_Sales.recordType-meta.xml
<RecordType>
    <fullName>NA_Vascular_Sales</fullName>
    <active>true</active>
    <businessProcess>Teleflex Standard Lead Process</businessProcess>
    <description>NA Vascular Sales</description>
    <label>NA Vascular Sales</label>
</RecordType>