fullSandbox11072023/force-app/main/default/objects/Lead/recordTypes/Teleflex_Standard_Lead.recordType-meta.xml
<RecordType>
    <fullName>Teleflex_Standard_Lead</fullName>
    <active>true</active>
    <businessProcess>Teleflex Standard Lead Process</businessProcess>
    <label>Teleflex Standard Lead</label>
</RecordType>