fullSandbox11072023/force-app/main/default/objects/Lead/validationRules/Business_Unit_Multiselect_Block.validationRule-meta.xml
<ValidationRule>
    <fullName>Business_Unit_Multiselect_Block</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
 CONTAINS(TEXT( Business_Unit__c ), &quot;::&quot;) 
)</errorConditionFormula>
    <errorMessage>Lead&apos;s cannot have more than one BU</errorMessage>
</ValidationRule>