fullSandbox11072023/force-app/main/default/objects/Lead/validationRules/Lead_Status_no_Qualified_for_Converted_L.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Status_no_Qualified_for_Converted_L</fullName>
    <active>false</active>
    <description>disable this Rule if you want your Package to Deploy. - ESC</description>
    <errorConditionFormula>AND( 
ISPICKVAL(Status, &quot;Qualified&quot;), 
NOT(ISCHANGED(IsConverted)) 
)</errorConditionFormula>
    <errorMessage>If a lead is qualified, it needs to be converted. Once the lead is converted, the status automatically updates to Qualified.</errorMessage>
</ValidationRule>