fullSandbox11072023/force-app/main/default/objects/Lead/validationRules/Other_Lead_Source_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Lead_Source_Required</fullName>
    <active>false</active>
    <description>Must include a Lead Source Comment that is available for all Lead Source selected (Open Text field)</description>
    <errorConditionFormula>AND(Text(LeadSource) = &quot;Other&quot;, Other_Lead_Source__c = &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>Specify Other Lead Source</errorMessage>
</ValidationRule>