fullSandbox11072023/force-app/main/default/objects/Lead/validationRules/Surgical_Disposables_DocMatterQual_Req.validationRule-meta.xml
<ValidationRule>
    <fullName>Surgical_Disposables_DocMatterQual_Req</fullName>
    <active>true</active>
    <description>When DocMatter is marked Yes DocMater Qualifier is Required</description>
    <errorConditionFormula>AND(ISPICKVAL(DocMatter__c, &quot;Yes&quot;),

  ISBLANK(TEXT(DocMatterQualifier__c))  

)</errorConditionFormula>
    <errorDisplayField>DocMatterQualifier__c</errorDisplayField>
    <errorMessage>When DocMatter is marked Yes DocMater Qualifier is Required</errorMessage>
</ValidationRule>