fullSandbox11072023/force-app/main/default/objects/Lead/validationRules/Surgical_Disposables_PF_and_POI_R_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Surgical_Disposables_PF_and_POI_R_Blank</fullName>
    <active>true</active>
    <description>Checks to make sure that Product Family and Product of Interest are filled out for Surgical Disposables</description>
    <errorConditionFormula>AND(ISPICKVAL(Business_Unit__c, &quot;Surgical Disposables&quot;),

OR(ISBLANK(TEXT(Product_Family_GPL__c)),
ISBLANK(TEXT(Product_of_Interest_GPL__c))
)
)</errorConditionFormula>
    <errorMessage>Based on your BU you must fill in Product Family and Product of Interest</errorMessage>
</ValidationRule>