fullSandbox11072023/force-app/main/default/objects/Lead/listViews/A_R_Lead_Assignment_Queue.listView-meta.xml
<ListView>
    <fullName>A_R_Lead_Assignment_Queue</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>A&amp;R Lead Assignment Queue</label>
    <queue>A_R_Lead_Assignment_Queue</queue>
    <sharedTo>
        <role>Anesthesia_Marketing</role>
        <role>Respiratory_Marketing</role>
        <role>Teleflex_Global_IT</role>
    </sharedTo>
</ListView>